@@ -1,0 +1,7 @@
+<html>
+<head></head>
+<body>
+<p tal:attributes="disabled python:True and default or 'disabled'"></p>
+<p tal:attributes="disabled python:False and default or 'disabled'"></p>
+</body>
+</html>
